[tool.poetry]
name = "wiki_tool_python"
version = "0.1.0"
description = "Script to perform tasks with websites on MediaWiki engine using API"
authors = ["Artiom Khandamirov <t9max@yandex.ru>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ArtUshak/wiki_tool_python/"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
requests = "^2.28.1"
requests-toolbelt = "^0.9.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
mypy = "^0.961"
flake8 = "^4.0.1"
flake8-docstrings = "^1.6.0"
flake8-bandit = "^3.0.0"
flake8-deprecated = "^1.3"
flake8-isort = "^4.1.1"
flake8-bugbear = "^22.7.1"
flake8-builtins = "^1.5.3"
flake8-eradicate = "^1.2.1"
flake8-print = "^5.0.0"
types-requests = "^2.28.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
