[tool.poetry]
name = "wiki_tool_python"
version = "0.2.3"
description = "Script to perform tasks with websites on MediaWiki engine using API"
authors = ["Artiom Khandamirov <t9max@yandex.ru>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ArtUshak/wiki_tool_python/"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.8.1"
click = "^8.1.7"
requests = "^2.31.0"
requests-toolbelt = "^1.0.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.4"
mypy = "^1.5.1"
flake8 = "^6.1.0"
flake8-bandit = "^4.1.1"
flake8-pydocstyle = "^0.2.2"
flake8-isort = "^6.0.0"
flake8-bugbear = "^23.7.10"
flake8-builtins = "^2.1.0"
flake8-eradicate = "^1.5.0"
flake8-print = "^5.0.0"
types-requests = "^2.31.0.2"
flake8-deprecated = "^2.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
