[project]
name = "wiki_tool_python"
version = "0.2.7"
description = "Script to perform tasks with websites on MediaWiki engine using API"
authors = [{ name = "Artiom Khandamirov", email = "t9max@yandex.ru" }]
requires-python = ">=3.12,<4"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.1.7,<9",
    "requests>=2.31.0,<3",
    "requests-toolbelt>=1.0.0,<2",
]

[project.urls]
Repository = "https://github.com/ArtUshak/wiki_tool_python/"

[dependency-groups]
dev = [
    "mypy>=1.5.1,<2",
    "types-requests>=2.31.0.2,<3",
    "rope>=1.14.0",
    "ruff>=0.14.8",
]

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D200", "D212", "D213", "COM812", "FBT001", "FBT002", "FBT003", "PLR0912", "PLR0913", "PLR0915", "C901", "TD005"]
